Bug 1175751 - Apply playback rate to compositor animations. r=bbirtles